--- a/character-explorer/src/app/info/info.component.html
+++ b/character-explorer/src/app/info/info.component.html
@@ -1,6 +1,25 @@
 <div>
-  <select [(ngModel)]="selectedProfile">
-    <option *ngFor="let profile of profiles" [value]="profile.profile_id">{{profile.cute_name}}</option>
-  </select>
-  <p>{{selectedProfile}}</p>
+  <div class="selection">
+    <label class="selection-element">
+      UserUUID: {{this.uuid}}
+    </label>
+    <label class="selection-element">
+      Profile:
+      <select [(ngModel)]="selectedProfile" (ngModelChange)="this.profileChange()">
+        <option *ngFor="let profile of profiles" [value]="profile.profile_id">{{profile.cute_name}}</option>
+      </select>
+    </label>
+  </div>
+  <div *ngIf="userMember !== undefined">
+    <label>
+      Pets:
+      <div class="grid-container">
+        <div *ngFor="let pet of this.userMember!.pets" class="grid-element">
+            {{pet.type}}<br>
+            {{pet.tier}}<br>
+            {{pet.exp}} (Level Calculation NYI)
+        </div>
+      </div>
+    </label>
+  </div>
 </div>
